testsuite/tests/typing-polyvariants-bugs-2/pr3918c.compilers.reference
File "pr3918c.ml", line 13, characters 11-12:
13 | let f x = (x : 'a vlist :> 'b vlist)
                ^
Error: This expression has type "'b Pr3918b.vlist"
       but an expression was expected of type "'b Pr3918b.vlist"
